bug fixes: nav z-index

--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ ol, ul {
 	position: fixed;
 	width: 100%;
 	border-bottom: 1px solid #DDD;
+	z-index: 9999;
 }
 
 .top-navigation .content{
